Refactor user registration and authentication: rename username to displayName, add token refresh logic